--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "angular2-notifications": "^0.7.8",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ng2-bootstrap": "^1.6.3",
+    "ng2-owl-carousel": "^0.1.15",
     "ng2-validation": "^4.2.0",
     "ngjs-color-picker": "^1.1.2",
     "rxjs": "^5.4.2",
+    "script-loader": "^0.7.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
