--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular2-notifications": "^0.7.8",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.4",
     "ng2-bootstrap": "^1.6.3",
     "ng2-owl-carousel": "^0.1.15",
     "ng2-validation": "^4.2.0",
@@ -42,6 +43,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/lodash": "^4.14.80",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
