--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "angular2-logger": "^0.6.0",
     "angular2-notifications": "^0.7.8",
+    "angular2-wizard": "^0.4.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.4",
     "ng2-bootstrap": "^1.6.3",
+    "bootstrap": "^4.0.0-alpha.6",
     "ng2-owl-carousel": "^0.1.15",
     "ng2-validation": "^4.2.0",
     "ngjs-color-picker": "^1.1.2",
