--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
     "angular2-logger": "^0.6.0",
     "angular2-notifications": "^0.7.8",
     "angular2-wizard": "^0.4.0",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.4",
     "ng2-bootstrap": "^1.6.3",
-    "bootstrap": "^4.0.0-alpha.6",
     "ng2-owl-carousel": "^0.1.15",
     "ng2-validation": "^4.2.0",
     "ngjs-color-picker": "^1.1.2",
+    "ngx-bootstrap": "^1.9.3",
     "rxjs": "^5.4.2",
     "script-loader": "^0.7.2",
     "zone.js": "^0.8.14"
@@ -46,8 +47,8 @@
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
     "@types/lodash": "^4.14.80",
+    "@types/node": "~6.0.60",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
