--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ng2-validation": "^4.2.0",
     "ngjs-color-picker": "^1.1.2",
     "ngx-bootstrap": "^1.9.3",
+    "ngx-owl-carousel": "^2.0.1",
     "rxjs": "^5.4.2",
     "script-loader": "^0.7.2",
     "zone.js": "^0.8.14"
