--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "angular2-logger": "^0.6.0",
     "angular2-notifications": "^0.7.8",
-    "angular2-wizard": "^0.4.0",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "jquery": "1.9.1",
     "lodash": "^4.17.4",
-    "ng2-bootstrap": "^1.6.3",
-    "ng2-owl-carousel": "^0.1.15",
+    "ngx-bootstrap": "^1.6.3",
+    "ngx-owl-carousel": "^0.1.15",
     "ng2-pdf-viewer": "^2.0.3",
     "ng2-validation": "^4.2.0",
     "ngjs-color-picker": "^1.1.2",
@@ -65,6 +65,7 @@
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.3.3",
-    "webpack": "^3.7.1"
+    "webpack": "^3.7.1",
+    "webpack-sources": "^1.0.2"
   }
 }
