--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ng2-pdf-viewer": "^2.0.3",
     "ng2-validation": "^4.2.0",
     "ngjs-color-picker": "^1.1.2",
+    "ngvas": "^0.7.6",
     "ngx-bootstrap": "^1.9.3",
     "ngx-owl-carousel": "^2.0.1",
     "pdfjs-dist": "^2.0.104",
