--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.4.5",
     "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "^4.4.6",
     "@angular/cdk": "^2.0.0-beta.12",
+    "@angular/cli": "1.4.5",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
+    "@angular/compiler-cli": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
@@ -40,13 +41,14 @@
     "ngvas": "^0.7.6",
     "ngx-bootstrap": "^1.9.3",
     "ngx-owl-carousel": "^2.0.1",
-    "pdfjs-dist": "^2.0.104",
-    "rxjs": "^5.4.2",
+    "pdfjs-dist": "^1.9.607",
+    "popper.js": "^1.12.3",
+    "rxjs": "^5.0.1",
     "script-loader": "^0.7.2",
-    "zone.js": "^0.8.14"
+    "typescript": "~2.3.3",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
@@ -64,8 +66,12 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.3.3",
     "webpack": "^3.7.1",
     "webpack-sources": "^1.0.2"
+  },
+  "engines": {
+    "node": "^9.1.0",
+    "npm": "^5.5.1",
+    "yarn": "1.3.2"
   }
 }
